Refactor: add CommitEntityService interface